test/files/neg/string-context-refchecked.check
string-context-refchecked.scala:3: error: cannot override final member:
final def foo: Int (defined in class C)
  s"foo${class D extends C { def foo = 2 }; new D}bar"
                                 ^
one error found
